# Osg_Qt5

./: .gitignore  CMakeLists.txt  README.md  controlView.cpp  controlView.h  main.cpp  mainWindow.cpp  mainWindow.h  scene.cpp  scene.h  viewerWidget.cpp  viewerWidget.h
CMakeModules/: FindGDAL.cmake  FindGEOS.cmake  FindOSG.cmake  FindVLD.cmake  FindosgEarth.cmake
data/: monkeyHead.dae
